# r0vert_ros

./: .gitignore  LICENSE
r0vert/: CMakeLists.txt  package.xml
r0vert/launch/: r0vert_teleop_joy.launch  r0vert_teleop_remote.launch
r0vert_firmware/: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  package.xml
r0vert_firmware/src/: PID.cpp  PID.h  as5040.cpp  as5040.h  battery.cpp  battery.h  main.cpp  motor.cpp  motor.h  timer.cpp  timer.h  wheel_encoder.cpp  wheel_encoder.h
r0vert_msgs/: CMakeLists.txt  package.xml
r0vert_msgs/msg/: BatteryVoltage.msg  WheelVelocity.msg
r0vert_panel/: CMakeLists.txt  package.xml  setup.py
r0vert_panel/nodes/: panel.py
r0vert_panel/src/r0vert_panel/: __init__.py  menu.py  rotary_encoder.py  status.py
r0vert_ros/: CMakeLists.txt  package.xml
r0vert_sequence_recorder/: CMakeLists.txt  package.xml
r0vert_sequence_recorder/include/sequence_recorder/: image_sequence_recorder.h  sequence.h  still_sequence_recorder.h
r0vert_sequence_recorder/launch/: dynamic_sequence_recorder.launch  still_sequence_recorder_complete.launch
r0vert_sequence_recorder/src/: image_sequence_recorder.cpp  sequence.cpp  sequence_recorder_node.cpp  still_sequence_recorder.cpp
r0vert_teleop/: CMakeLists.txt  package.xml
r0vert_teleop/launch/: teleop_joy.launch
r0vert_teleop/src/: teleop_joy.cpp
