<?xml version="1.0"?>
<package>
  <name>r0vert_firmware</name>
  <version>0.1.0</version>
  <description>
    This package contains the r0vert arduino firmware.
  </description>
  <maintainer email="malte.splietker@gmail.com">Malte Splietker</maintainer>
  <license>BSD</license>

  <url>https://github.com/splietker/r0vert_ros</url>
  <author>Malte Splietker</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_msgs</run_depend>
</package>
