<?xml version="1.0"?>
<package>
  <name>r0vert_msgs</name>
  <version>0.1.0</version>
  <description>
    This package provides r0vert-specific messages.
  </description>
  <maintainer email="malte.splietker@gmail.com">Malte Splietker</maintainer>
  <license>BSD</license>

  <url>https://github.com/splietker/r0vert_ros</url>
  <author>Malte Splietker</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
</package>
