<?xml version="1.0"?>
<package>
  <name>r0vert_panel</name>
  <version>0.1.0</version>
  <description>
    The package provides a node for displaying information on the LCD panel.
  </description>
  <maintainer email="malte.splietker@gmail.com">Malte Splietker</maintainer>
  <license>BSD</license>

  <url>https://github.com/splietker/r0vert_ros</url>
  <author>Malte Splietker</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
