<?xml version="1.0"?>
<package>
  <name>r0vert_ros</name>
  <version>0.1.0</version>
  <description>
    The r0vert metapackage.
  </description>
  <maintainer email="malte.splietker@gmail.com">Malte Splietker</maintainer>
  <license>BSD</license>
  <url>https://github.com/splietker/r0vert_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>r0vert_firmware</run_depend>
  <run_depend>r0vert_msgs</run_depend>
  <run_depend>r0vert_panel</run_depend>
  <run_depend>r0vert_teleop</run_depend>
  <run_depend>r0vert</run_depend>

  <export>
   <metapackage/>
  </export>
</package>
