<?xml version="1.0"?>
<package>
  <name>r0vert_sequence_recorder</name>
  <version>0.0.0</version>
  <description>
    This package provides functionality to record camera and odometry sequences with r0vert.
  </description>
  <maintainer email="malte.splietker@gmail.com">Malte Splietker</maintainer>
  <license>BSD</license>

  <url>https://github.com/splietker/r0vert_ros</url>
  <author>Malte Splietker</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>joy</build_depend>
  <build_depend>r0vert_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>turtle_actionlib</build_depend>

  <run_depend>joy</run_depend>
  <run_depend>r0vert_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>turtle_actionlib</run_depend>
</package>